# grader

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: ALGORITHM.md  ARCHITECTURE.md  PORTFOLIO.md  QR_SHEETS.md  VALIDATION.md
docs/images/: README.md
examples/: AnswerKey.xlsx  README.md  qr_sheets.csv
examples/bulk_detected/: ABC-S1 A-1_detected.csv  ABC-S1 B-1_detected.csv  ABC-S2 A-1_detected.csv  ABC-S2 B-1_detected.csv  ABC-S3 A-1_detected.csv  ABC-S3 B-1_detected.csv  ABC-S4 A-1_detected.csv  ABC-S4 B-1_detected.csv  ABC-S5 A-1_detected.csv  ABC-S5 B-1_detected.csv  grader_metrics_all_files.csv
src/grader/: __init__.py  alignment.py  cli.py  config.py  detection.py  geometry.py  grader.py  grading.py  part_detection.py  processing.py  qr_sheets.py  reporting.py  templates.py  visualization.py
tests/: test_basic.py  test_qr_sheets.py
